# gmail-automation-servicenow

./: .env  Dockerfile  README.md  pyproject.toml
knowledge/: user_preference.txt
src/gmail_crew_ai/: __init__.py  api.py  crew.py  main.py  models.py
src/gmail_crew_ai/config/: agents.yaml  tasks.yaml
src/gmail_crew_ai/tools/: __init__.py  date_tools.py  email_tools.py  gmail_reader.py  gmail_tools.py
