[project]
name = "gmail_crew_ai"
version = "0.1.0"
description = "ServiceNow ticket response automation using CrewAI and Gmail"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "bs4>=0.0.2",  # beautifulsoup4 is bs4
    "crewai[tools]>=0.102.0,<1.0.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.10.0",  # crewai likely pulls this, but good to be explicit
    "requests>=2.32.0",  # crewai tools might use this
    "imaplib2>=2.57",  # For email fetching
    # Add other specific dependencies if your tools require them e.g. for Gmail API:
    # "google-api-python-client",
    # "google-auth-httplib2",
    # "google-auth-oauthlib",
]

[project.scripts]
gmail_crew_ai = "gmail_crew_ai.main:run"
run_crew = "gmail_crew_ai.main:run"
train = "gmail_crew_ai.main:train"
replay = "gmail_crew_ai.main:replay"
test = "gmail_crew_ai.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
